GNOME Bugzilla – Bug 721753
The positions of the buttons in the headerbar is wrong
Last modified: 2014-01-10 02:02:45 UTC
After the following commit in gtk+, the positions of the buttons in the headerbar is wrong: https://git.gnome.org/browse/gtk+/commit/?id=c3e91c70317b337c72282a1aad68fc82a82bf9e9
Created attachment 265610 [details] [review] font-view: Fix headerbar item positions
Review of attachment 265610 [details] [review]: Looks good, thanks. Please also bump the required GTK version to current master when you push.
Review of attachment 265610 [details] [review]: Pushed as 55485a2 - font-view: Fix headerbar item positions