font-view: Fix headerbar item positions

Also bump GTK+ dependency to 3.11.4.

https://bugzilla.gnome.org/show_bug.cgi?id=721753